# NorteTech-Site

./: .gitignore  README.md  content_fixtures.md  pyproject.toml
accounts/: admin.py  forms.py  models.py  views.py
accounts/migrations/: 0001_initial.py
careers/: admin_rh.py  models.py  views.py
careers/migrations/: 0001_initial.py  0002_documenttype_candidatedocument.py  0003_candidate_terms_accepted_candidate_terms_accepted_at_and_more.py
config/: settings.py  urls.py
core/: admin.py  context_processors.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_contactmessage_homebanner.py  0003_homevideo_delete_homebanner_and_more.py  0004_operatingbase.py  0005_noticia.py  0006_alter_noticia_options_remove_noticia_link_and_more.py  0007_companysettings_about_text.py  0008_canalcontato.py  0009_delete_contactmessage.py  0010_carouselimage_homevideo_overlay_text.py  0011_alter_carouselimage_description.py  0012_remove_homevideo_overlay_text_homevideo_about_text.py  0013_companysettings_stats_bases_and_more.py  0014_companysettings_about_image.py  0015_remove_companysettings_vision.py
services/: admin.py  models.py  serializers.py  views.py
services/migrations/: 0001_initial.py
templates/: about.html  base.html  careers_history.html  careers_home.html  careers_job_detail.html  careers_onboarding.html  careers_talent_bank.html  contact.html  home.html  privacidade.html  service_detail.html  services_list.html  todas_noticias.html
templates/accounts/: form_generic.html  login.html  profile.html  register.html
templates/admin/: rh_dashboard.html
